syntax = "proto3";
package CyberLife.Protobuff.Metadata;

import "place.proto";
import "mapSize.proto";

message StateMetadata
{
    string name = 1;
    double value = 2; 


}




message PhenomenMetadata
{
    string name = 1;
    Place place = 2;

}



message LifeFormMetadata
{
    Place place  = 1;
    int64 id = 2;
    repeated StateMetadata statesMetadata = 3;

}

message EnvironmentMetadata
{
    MapSize mapSize = 1; 
    repeated PhenomenMetadata phenomenaMetadata = 2; 

}



message WorldMetadata
{
    EnvironmentMetadata environmentMetadata = 1; 
    map<int64, LifeFormMetadata> LifeFormMetadata = 2;
    string name = 3;
    int32 age = 4;
}